# Todo-app

./: .env  Dockerfile.dev  pyproject.toml
docker_todoo/: main.py
