[tool.poetry]
name = "docker-todoo"
version = "0.1.0"
description = ""
authors = ["Abdul-Haseeb-065 <abdulhaseeb065@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = "^0.0.18"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
pytest = "^8.2.1"
psycopg-binary = "^3.1.19"
psycopg = "^3.1.19"
starlette = "^0.37.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
